--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
     <h1>BotTemplate</h1>
     <p>Describe your bot here and your terms of use etc.</p>
     <p>Visit <a href="https://www.botframework.com/">Bot Framework</a> to register your bot. When you register it, remember to set your bot's endpoint to <pre>https://<i>your_bots_hostname</i>/api/messages</pre></p>
+    <iframe src='https://webchat.botframework.com/embed/cmbotdemo?s=wYXKKKMU96g.cwA.kdA.pnHdFfaj-kMkhS0KzDywFxabHgIGP6Zdd7N57ozE4VM' width="400" height="400"></iframe>
 </body>
 </html>
